# turbofan_predictive_maintenance

./: .gitignore  README.md  pyproject.toml  turbofan_exploration.ipynb
